ADD WS : isRestaurantAvailable
Renvoie true si le resto possède au moins une table avec un nombre de
places >= nbCouverts donné en paramètre
